inter service communication using httpclient